@@ -24,18 +24,6 @@ tasks.test {
     useJUnitPlatform()
 }
 
-tasks.withType<JavaCompile> {
-    options.run {
-        isFork = true
-        compilerArgs.addAll(
-                arrayOf(
-                        "--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED",
-                        "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"
-                )
-        )
-    }
-}
-
 tasks.register("checkstyleAll") {
     group = "verification"
     dependsOn(tasks.withType<Checkstyle>())
